# llama2.c-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  kernel.rs  lib.rs  main.rs  model.rs  operator.rs  quant.rs  sampler.rs  state.rs  tensor.rs  tokenizer.rs  weights.rs
