[package]
name = "llama2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
num_cpus = { version = "1.16.0", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = { version = "1.7.0", optional = true }
thiserror = "1.0.47"

# [profile.release]
# panic = "abort"

[features]
defaults = []
q8 = []
parallel = ["dep:rayon", "dep:num_cpus"]
